<resources>
    <string name="app_name">InstagramClone</string>
    <string name="title_activity_log_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">"Sign In"</string>
    <string name="log_in">"Log In"</string>
    <string name="email_hint">"E-mail"</string>
    <string name="username_hint">"Username"</string>
    <string name="password_hint">"Password"</string>
    <string name="user_profile_name">"Profile name"</string>
    <string name="user_bio">"Bio"</string>
    <string name="user_profession">"Profession"</string>
    <string name="user_hobbies">"Hobbies"</string>
    <string name="user_favorite_sport">"Favorite sport"</string>
    <string name="loading">"Loading..."</string>
    <string name="description">"Enter a description"</string>
    <string name="share">"Share"</string>
    <string name="post_image">"Post Image"</string>
    <string name="logout">"Logout"</string>
    <string name="search_label">"Search"</string>
    <string name="help_label">"Help"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
