<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_label"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/help"
        android:icon="@drawable/ic_help"
        android:title="@string/help_label" />

    <item
        android:id="@+id/postImageItem"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/post_image"
        android:icon="@drawable/camera_item" />

    <item
        android:id="@+id/logoutUserItem"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>